<resources>
    <string name="app_name">Golden Duck</string>
    <string name="title_home">Golden Duck</string>
    <string name="new_match">New Match</string>
    <string name="previous_matches">Matches</string>
    <string name="players">Players</string>
    <string name="stats">Stats</string>
    <string name="match_setup">Match Setup</string>
    <string name="team_a_hint">Team A name</string>
    <string name="team_b_hint">Team B name</string>
    <string name="overs_hint">Number of overs *</string>
    <string name="players_hint">Players per team *</string>
    <string name="ball_type_label">Ball type *</string>
    <string name="btn_start_match">Start Match</string>
    <string name="btn_next_add_players">Next: Add Players</string>
    <string name="add_player">+ Add Player</string>
    <string name="player_name_hint">Player name</string>
    <string name="player_jersey_hint">Jersey Number</string>
    <string name="add_photo_label">Add photo (optional):</string>
    <string name="btn_camera">Camera</string>
    <string name="btn_gallery">Gallery</string>
    <string name="btn_remove">✕</string>
    <string name="score_placeholder">0/0</string>
    <string name="overs_placeholder">Overs: %1$s / %2$d</string>
    <string name="batsman_placeholder">Batsman: %1$s</string>
    <string name="bowler_placeholder">Bowler: %1$s</string>
    <string name="btn_start_2nd_innings">Start 2nd Innings</string>
    <string name="btn_back_to_home">Back to Home</string>
    <string name="btn_finish_match">Finish Match</string>
    <string name="wicket">WICKET</string>

    <!-- Ball Types -->
    <string name="select_ball_type">Select ball type</string>
    <string name="ball_type_stumper">Stumper</string>
    <string name="ball_type_red_tennis">Red Tennis</string>
    <string name="ball_type_wind_ball">Wind Ball</string>
    <string name="ball_type_green_tennis">Green Tennis</string>
    <string name="ball_type_leather">Leather</string>
    <string name="ball_type_plastic">Plastic</string>
    <string name="ball_type_rubber">Rubber</string>
    <string name="ai_assistant_badge">AI ✨</string>
    <string name="ai_assistant_cd">Duckie AI Assistant</string>

    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_6">6</string>
    <string name="btn_wd">WD</string>
    <string name="btn_nb">NB</string>
    <string name="btn_b">B</string>
    <string name="btn_lb">LB</string>
    <string name="toast_coming_soon">Coming next!</string>
    <string name="toast_max_players">Max %1$d players reached</string>
    <string name="error_enter_name">Enter name first</string>
    <string name="error_no_camera">No camera app found</string>
    <string name="error_create_image">Could not create image file</string>
    <string name="match_saved">Match saved!</string>
    <string name="score_format">%1$d/%2$d</string>
    <string name="innings_over_target">Innings over! Target: %1$d</string>
    <string name="won_by_wickets">%1$s won by %2$d wicket(s)!</string>
    <string name="won_by_runs">%1$s won by %2$d run(s)!</string>
    <string name="match_tied">Match tied!</string>
    <string name="stat_most_runs">Most Runs</string>
    <string name="stat_highest_score">Highest Score</string>
    <string name="stat_best_strike_rate">Best Strike Rate</string>
    <string name="stat_most_sixes">Most Sixes</string>
    <string name="stat_most_fours">Most Fours</string>
    <string name="stat_most_fifties">Most 50s</string>
    <string name="stat_most_thirties">Most 30s</string>
    <string name="stat_most_wickets">Most Wickets</string>
    <string name="stat_best_bowling">Best Bowling</string>
    <string name="stat_best_bowling_average">Best Bowling Average</string>
    <string name="stat_best_economy">Best Economy</string>
    <string name="stat_best_bowling_strike_rate">Best Bowling Strike Rate</string>
    <string name="stat_most_five_wicket_hauls">Most 5 Wicket Hauls</string>
    <string name="stat_most_three_wicket_hauls">Most 3 Wicket Hauls</string>
    <string name="stat_most_two_wicket_hauls">Most 2 Wicket Hauls</string>
    <string name="innings_will_start">Inning will start</string>
    <string name="over_label">Over %1$d</string>
    <string name="over_runs_suffix"> (%1$d runs)</string>
    <string name="maiden_badge">MAIDEN</string>
    <string name="exit_match_title">Exit Match?</string>
    <string name="exit_match_msg">The match will be saved as a draft. You can resume it later from Match History.</string>
    <string name="match_abandoned_msg">!!! MATCH ABANDONED !!!</string>
    <string name="match_resumed_msg">Match Resumed at %1$s on %2$s</string>
    <string name="match_paused_msg">Match Paused at %1$s on %2$s</string>
    <string name="retired_out_msg">%1$s is Retired Out</string>
    <string name="retired_hurt_msg">%1$s is Retired Hurt</string>
    <string name="select_bowler">Select Bowler</string>
    <string name="select_striker">Select Striker</string>
    <string name="select_non_striker">Select Non-Striker</string>
    <string name="innings_complete">Innings Complete</string>
    <string name="match_finished">Match Finished</string>
    <string name="view_summary">View Summary</string>
    <string name="home">Home</string>
    <string name="next_over">Next Over</string>
    <string name="player_name_display">%1$s</string>
    <string name="batter_stats_format">%1$d(%2$d)</string>
    <string name="quick_add_runs_label">Quick Add Runs Ran:</string>
    <string name="over_narrative_format">%1$s to %2$s</string>
    <string name="stats_subtitle">Leaderboards &amp; Career Records</string>
    <string name="stat_card_default_subtitle">View leaderboard &amp; rankings</string>
    <string name="leaderboard_subtitle">Rankings &amp; Player Standings</string>
    <string name="empty_leaderboard_msg">No stats recorded yet for this category.\nPlay matches to build rankings!</string>
    <string name="players_subtitle">Squad Roster &amp; League Rankings</string>
    <string name="btn_import_players">Import Players</string>
    <string name="btn_compare_players">Compare Players</string>
    <string name="no_players_found">No players found.</string>
    <string name="tap_to_build_squad">Tap + to build your squad.</string>
    <string name="add_new_player">Add New Player</string>
</resources>
